feat: added postService test

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "type": "module",
   "name": "tcit-backend-test",
   "version": "1.0.0",
   "description": "backend para prueba de tcit",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=dev jest --verbose --detectOpenHandles"
+    "test": "NODE_ENV=test jest --verbose --detectOpenHandles",
+    "start": "nodemon index.js",
+    "db:test:migrate": "NODE_ENV=test npx sequelize-cli db:migrate --config ./app/services/database/config/config.js --migrations-path ./app/services/database/migrations",
+    "db:test:rollback": "NODE_ENV=test npx sequelize-cli db:migrate:undo:all --config ./app/services/database/config/config.js --migrations-path ./app/services/database/migrations"
   },
   "keywords": [
     "tcit",
