--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/boom": "10.0.0",
+    "cors": "2.8.5",
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "helmet": "^6.0.0",
     "joi": "17.6.3",
     "pg": "8.8.0",
     "pg-hstore": "2.3.4",
